esp32 touch INT ok

--- a/display/ssd2828-uart-config/pc/ssd2828_delay_calc.ipynb
+++ b/display/ssd2828-uart-config/pc/ssd2828_delay_calc.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data rate: 640 Mbps\n",
-      "ui: 1.56e-09 s\n",
-      "Nibble clock period: 6.25e-09 s\n"
+      "Data rate: 1200 Mbps\n",
+      "ui: 8.33e-10 s\n",
+      "Nibble clock period: 3.33e-09 s\n"
      ]
     }
    ],
@@ -20,6 +20,7 @@
     "# DATA_RATE_MBPS = 840\n",
     "DATA_RATE_MBPS = 650\n",
     "DATA_RATE_MBPS = 640\n",
+    "DATA_RATE_MBPS = 1200\n",
     "\n",
     "\n",
     "ui = (DATA_RATE_MBPS*1e6) ** -1\n",
@@ -49,30 +50,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hs_zero_delay: 114.38 ns\n",
-      "hs_prepare_delay: 46.25 ns\n",
+      "hs_zero_delay: 110.00 ns\n",
+      "hs_prepare_delay: 43.33 ns\n",
       "clk_zero_delay: 262.00 ns\n",
       "clk_prepare_delay: 38.00 ns\n",
-      "clk_pre_delay: 12.50 ns\n",
-      "clk_post_delay: 141.25 ns\n",
+      "clk_pre_delay: 6.67 ns\n",
+      "clk_post_delay: 103.33 ns\n",
       "clk_trail_delay: 60.00 ns\n",
-      "hs_trail_delay: 66.25 ns\n",
+      "hs_trail_delay: 63.33 ns\n",
       "\n",
-      "HZD = 19\n",
-      "HPD = 4\n",
-      "CZD = 42\n",
-      "CPD = 4\n",
+      "HZD = 33\n",
+      "HPD = 10\n",
+      "CZD = 79\n",
+      "CPD = 9\n",
       "CPED = 2\n",
-      "CPTD = 23\n",
-      "CTD = 10\n",
-      "HTD = 11\n"
+      "CPTD = 32\n",
+      "CTD = 19\n",
+      "HTD = 20\n"
      ]
     }
    ],
@@ -128,27 +129,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data rate: 640 Mbps\n",
-      "ui: 1.56e-09 s\n",
-      "Nibble clock period: 6.25e-09 s\n",
+      "Data rate: 1200 Mbps\n",
+      "ui: 8.33e-10 s\n",
+      "Nibble clock period: 3.33e-09 s\n",
       "+------+-------------------+-----------+---------------+\n",
       "| REG  |     Delay Type    | Time (ns) | Rounded Value |\n",
       "+------+-------------------+-----------+---------------+\n",
-      "| HZD  |   HS Zero Delay   |   114.38  |       19      |\n",
-      "| HPD  |  HS Prepare Delay |   46.25   |       4       |\n",
-      "| CZD  |   CLK Zero Delay  |   262.00  |       42      |\n",
-      "| CPD  | CLK Prepare Delay |   38.00   |       4       |\n",
-      "| CPED |   CLK Pre Delay   |   12.50   |       2       |\n",
-      "| CPTD |   CLK Post Delay  |   141.25  |       23      |\n",
-      "| CTD  |  CLK Trail Delay  |   60.00   |       10      |\n",
-      "| HSD  |   HS Trail Delay  |   66.25   |       11      |\n",
+      "| HZD  |   HS Zero Delay   |   110.00  |       33      |\n",
+      "| HPD  |  HS Prepare Delay |   43.33   |       10      |\n",
+      "| CZD  |   CLK Zero Delay  |   262.00  |       79      |\n",
+      "| CPD  | CLK Prepare Delay |   38.00   |       9       |\n",
+      "| CPED |   CLK Pre Delay   |    6.67   |       2       |\n",
+      "| CPTD |   CLK Post Delay  |   103.33  |       32      |\n",
+      "| CTD  |  CLK Trail Delay  |   60.00   |       19      |\n",
+      "| HSD  |   HS Trail Delay  |   63.33   |       20      |\n",
       "+------+-------------------+-----------+---------------+\n"
      ]
     }
